feat(JDK 21): add String Templates testcases